src/objects/Integration_Message_Incoming__c/fields/Command__c.field-meta.xml
<CustomField>
    <fullName>Command__c</fullName>
    <label>Command</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Create_Opportunity</fullName>
            </value>
            <value>
                <fullName>Create_Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>