src/objects/Integration_Message_Incoming__c/fields/Command_Argument__c.field-meta.xml
<CustomField>
    <fullName>Command_Argument__c</fullName>
    <inlineHelpText>The data schema for a command&#39;s argument is defined elsewhere.</inlineHelpText>
    <label>Command_Argument</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>