src/objects/Integration_Message_Incoming__c/fields/Execution_Error__c.field-meta.xml
<CustomField>
    <fullName>Execution_Error__c</fullName>
    <inlineHelpText>Any errors that occurred when executing the command.</inlineHelpText>
    <label>Execution Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>