src/objects/Integration_Message_Incoming__c/fields/Processing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Processing_Stage__c</fullName>
    <label>Processing Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>