src/objects/Integration_Message_Incoming__c/fields/Run_Async__c.field-meta.xml
<CustomField>
    <fullName>Run_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Async</label>
    <type>Checkbox</type>
</CustomField>